ci: Add new 7.95.0 bundle to a catalog
Signed-off-by: Mykhailo Kuznietsov <mkuznets@redhat.com>

--- a/olm-catalog/stable/channel.yaml
+++ b/olm-catalog/stable/channel.yaml
@@ -95,3 +95,5 @@ entries:
     replaces: eclipse-che.v7.92.0
   - name: eclipse-che.v7.94.0
     replaces: eclipse-che.v7.93.0
+  - name: eclipse-che.v7.95.0
+    replaces: eclipse-che.v7.94.0
